Issue #1339: Fix close pedigree button on IE8 and improve close dialogue sizing

--- a/components/pedigree/resources/src/main/resources/pedigree/editor.css
+++ b/components/pedigree/resources/src/main/resources/pedigree/editor.css
@@ -765,10 +765,15 @@
 
 .msdialog-box {
     /*overflow:auto;*/
-    width: 650px;
+    width: 60% !important;
+    min-width: 650px !important;
+    max-width: 720px !important;
 }
 .msdialog-box .content {
     text-align: center;
+}
+.pedigree-okcancel {
+    width: 680px !important;
 }
 .no-mouse-interaction {
     pointer-events: none;
